--- a/administrator/components/com_schuweb_gallery/models/forms/image.xml
+++ b/administrator/components/com_schuweb_gallery/models/forms/image.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
     <fieldset name="details">
-        <field name="file" type="text" default="" readonly="true" class="readonly" label="SCHUWEB_GALLERY_FILE_LABEL"/>
-        <field name="path" type="text" default="" readonly="true" class="readonly" label="SCHUWEB_GALLERY_PATH_LABEL"/>
-        <field name="tags" type="sql" key_field="id" value_field="name" label="SCHUWEB_GALLERY_TAGS" multiple="true"
-               query="SELECT * FROM #__schuweb_gallery_tags"></field>
+        <field name="file" type="text" default="" readonly="true" class="readonly inputbox span12 small" label="SCHUWEB_GALLERY_FILE_LABEL"/>
+        <field name="path" type="text" default="" readonly="true" class="readonly inputbox span12 small" label="SCHUWEB_GALLERY_PATH_LABEL"/>
+        <field name="tags" type="tag"  label="JTAG" description="JTAG_DESC" class="inputbox span12 small" multiple="true"/>
     </fieldset>
 </form>
